--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,3 +1,15 @@
 spring:
   application:
     name: 'app-agendamento-backend'
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        jdbc:
+          time_zone: America/Fortaleza
+    open-in-view: false
+  datasource:
+    url: jdbc:postgresql://localhost:5432/appagendamentodb
+    username: agendamentobackend
+    password: 123789
