feat: Adiciona documentação OpenAPI (Swagger) para a API

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -13,3 +13,8 @@ spring:
     url: jdbc:postgresql://localhost:5432/appagendamentodb
     username: agendamentobackend
     password: 123789
+springdoc:
+  open-api:
+    titulo: 'App Agendamento BackEnd'
+    descricao: 'API responsável pelo gerenciamento de todos os recursos do aplicativo App Agendamento'
+    versao: '1.0.0'
